<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/ss">
        <item
            android:id="@+id/action_setSource"
            android:title="@string/app_menu_set_source"
            android:orderInCategory="1"
            app:showAsAction="never"/>
    </group>
    <group
        android:id="@+id/sc">
        <item
            android:id="@+id/action_setCountry"
            android:title="@string/app_menu_set_country"
            android:orderInCategory="2"
            app:showAsAction="never" />
    </group>
    <group
        android:id="@+id/fs">
        <item
            android:id="@+id/action_freeSearch"
            android:title="@string/app_menu_free_search"
            android:orderInCategory="3"
            app:showAsAction="never" />
    </group>

</menu>
